--- a/ArtworkApp/ArtworkApp/ArtworkApp.csproj
+++ b/ArtworkApp/ArtworkApp/ArtworkApp.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.8" />
   </ItemGroup>
 
 </Project>
